# ORB_SLAM2_2021

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_ros.sh  kitti_mono.sh  stereo_kitti.sh
Examples/Monocular/: EuRoC.yaml  KITTI00-02.yaml  KITTI03.yaml  KITTI04-12.yaml  TUM1.yaml  TUM2.yaml  TUM3.yaml  mono_euroc.cc  mono_ipWebcam  mono_ipWebcam.cpp  mono_kitti.cc  mono_tum.cc  mono_video.cpp
Examples/RGB-D/: TUM1.yaml  TUM2.yaml  TUM3.yaml  rgbd_tum.cc
Examples/ROS/ORB_SLAM2/: Asus.yaml  CMakeLists.txt
Examples/Stereo/: CMakeLists.txt  CameraTrajectory.txt  EuRoC.yaml  KITTI00-02.yaml  KITTI03.yaml  KITTI04-12.yaml  KITTI17.yaml  arducam.yaml  arducam_images.cpp  arducam_images.yaml  arducam_stereo  arducam_stereo.cpp  arducam_stereo.yaml  arducam_video.cpp  ros_stereo_kitti.cc  stereo_euroc.cc  stereo_kitti.cc  stereo_kitti_ros.cc
Vocabulary/: bin_vocabulary  bin_vocabulary.cpp
calib/: PhoneLR.yaml  calib_matrix.txt  cam_calib.py  dist_params.txt
calib/stereo_calib/: 2_chess_cycle.py  3_pairs_cut.py  4_calibration.py  4_lr-calibration.py  arducam_images.yaml  camera_matrix_arducam.txt  distance_params.txt
calib/stereo_calib/calib_result/: 01_cvt_npy_txt.py  cam_mats_left.npy  cam_mats_right.npy  dist_coefs_left.npy  dist_coefs_right.npy  e_mat.npy  f_mat.npy  proj_mats_left.npy  proj_mats_right.npy  rect_trans_left.npy  rect_trans_right.npy  rectification_map_left.npy  rectification_map_right.npy  rot_mat.npy  trans_vec.npy  undistortion_map_left.npy  undistortion_map_right.npy  valid_boxes_left.npy  valid_boxes_right.npy
calib/stereo_calib/calib_result/calib_results_txt/: cam_mats_left.txt  cam_mats_right.txt  dist_coefs_left.txt  dist_coefs_right.txt  e_mat.txt  f_mat.txt  proj_mats_left.txt  proj_mats_right.txt  rect_trans_left.txt  rect_trans_right.txt  rot_mat.txt  trans_vec.txt  valid_boxes_left.txt  valid_boxes_right.txt
calib/stereo_depth_demo/: 2_chess_cycle.py  3_pairs_cut.py  4_calibration.py  camera_calibration.py  camera_params.txt
calib/stereo_depth_demo/calib_result/: cam_mats_left.npy  cam_mats_left.txt  cam_mats_right.npy  cam_mats_right.txt  convert_npy_txt.py  disp_to_depth_mat.npy.txt  dist_coefs_left.npy  dist_coefs_left.npy.txt  dist_coefs_right.npy  dist_coefs_right.npy.txt  e_mat.npy  e_mat.npy.txt  f_mat.npy  f_mat.npy.txt  proj_mats_left.npy  proj_mats_left.npy.txt  proj_mats_right.npy  proj_mats_right.npy.txt  rect_trans_left.npy  rect_trans_left.npy.txt  rect_trans_right.npy  rect_trans_right.npy.txt  rectification_map_left.npy  rectification_map_right.npy  rot_mat.npy  rot_mat.npy.txt  trans_vec.npy  trans_vec.npy.txt  undistortion_map_left.npy  undistortion_map_right.npy  valid_boxes_left.npy  valid_boxes_left.npy.txt  valid_boxes_right.npy  valid_boxes_right.npy.txt
calibration/: calibrator.py  tarfile_calibration.py
gridmapper/: grid_map_stKi_filtered_0_scale_1_resize_1_0.50_0.55.pgm  openGridMap.py  pointCloud2GridMap.py
gridmapper/include/: MapProcessor.h
gridmapper/maps/: GridMap_stereoKITTI.pgm  GridMap_stereoKITTI_03red.pgm  grid_map_red.pgm  grid_map_stKi_filtered_0_scale_1_resize_1_0.50_0.55.pgm  monoKi_grid_map_red.pgm  monoKitti_gridMap_CPP_red.pgm  stKi_grid_map_red.pgm  stereo_kitti_gm_from_binary.pgm
gridmapper/point_clouds/: stereo_kitti_mapPoints.txt  stereo_kitti_mapPoints_03red.txt
gridmapper/py/: openGridMap.py  pgm_to_png.py  pointCloud2GridMap.py  scrollingWindowTest.py
gridmapper/py/maps/: monoKi_grid_map_full.pgm  monoKi_grid_map_red.pgm  monoKitti_gridMap_CPP_red.pgm
gridmapper/py/trajectories/: stKi_KeyFrameTrajectory_red.txt  stKi_map_pts_and_keyframes_red.txt
gridmapper/src/: MapProcessor.cpp  gridmapper  gridmapper.cpp
gridmapper/trajectories/: monoKi_CameraTrajectory_full.txt  monoKi_CameraTrajectory_red.txt  monoKi_KeyFrameTrajectory_red.txt  monoKi_map_pts_and_keyframes_red.txt  stKi_CameraTrajectory_full.txt  stKi_CameraTrajectory_red.txt  stKi_KeyFrameTrajectory_red.txt  stKi_map_pts_and_keyframes_red.txt  stereo_kitti_traj_Quaternions.txt  stereo_kitti_traj_Quaternions_03red.txt
include/: BoostArchiver.h  Converter.h  Frame.h  FrameDrawer.h  GridMapping.h  Initializer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapDrawer.h  MapPoint.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  Optimizer.h  PnPsolver.h  PointCloudPublisher.h  ROSPublisher.h  Sim3Solver.h  System.h  Tracking.h  Viewer.h
rosconfig/: os2_config.rviz  ros_bringup.sh  ros_bringup_os2.sh
rosconfig/pc2ls/: CMakeLists.txt  package.xml
rosconfig/pc2ls/launch/: pc2ls.launch
scripts/: arducam_images.sh  arducam_stereo.sh  ipwebcam.sh  mono_kitti.sh  nohup.out  ros_mono.sh  stKi_CameraTrajectory_red.txt  stKi_map_pts_and_keyframes_red.txt  stereo_kitti.sh  stereo_kitti_full.sh  stereo_kitti_red.sh  video.sh
src/: Converter.cc  Frame.cc  FrameDrawer.cc  GridMapping.cpp  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  PointCloudPublisher.cpp  ROSPublisher.cpp  Sim3Solver.cc  System.cc  Tracking.cc  Viewer.cc
testing/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  opencv_test  opencv_test.cpp
video_capture/: 01_vid_to_jpg.py  02_arducam2video.py  03_vid_to_png.py
video_capture/imse_test01/: times.txt
video_capture/testing/: imgsave_multithreaded.py  mt_test01.py
